# infrastructure-agent

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  OPENHANDS_INSTRUCTIONS.md  PLAN.md  README.md  config.yaml  docker-compose.yml  killtele  monitor.py  monitor_state.json  pyproject.toml  requirements.txt  starttele  telegram_bot.py
docs/: api.md  architecture.md  deployment.md
infra_agent_v2/: __init__.py  config.py  main.py
snapshots/: 2026-06-21_144213.json  2026-06-21_144344.json  2026-06-22_151446.json  2026-06-22_155046.json  2026-06-22_155808.json  2026-06-22_162239.json  2026-06-22_172250.json  2026-06-22_182259.json  2026-06-22_192310.json  2026-06-22_203911.json  2026-06-23_104609.json  2026-06-23_114629.json  2026-06-23_124647.json  2026-06-23_134706.json  2026-06-23_144726.json  2026-06-23_154746.json  2026-06-23_164805.json  2026-06-23_174824.json  2026-06-23_184843.json  2026-06-23_194902.json  2026-06-23_204922.json  2026-06-23_214947.json  2026-06-23_225005.json  2026-06-24_093354.json  2026-06-24_103408.json  2026-06-24_113415.json  2026-06-24_123436.json  2026-06-24_133451.json  2026-06-24_143455.json  2026-06-24_153458.json  2026-06-24_163501.json  2026-06-24_173504.json  2026-06-24_183507.json  2026-06-24_193509.json  2026-06-24_203513.json  2026-06-24_205044.json  2026-06-24_215113.json  2026-06-25_112958.json  2026-06-25_123006.json  2026-06-25_133012.json  (+7 more)
src/: agent.py  core.py  llm.py  router.py
tests/: conftest.py  test_alerting.py  test_analyzer.py  test_auth.py  test_config.py  test_config_watcher.py  test_health.py  (+16 more)
(+53 files in other folders)
