[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "infrastructure-agent"
version = "0.1.0"
description = "Infrastructure monitoring agent with Telegram notifications"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "python-telegram-bot>=22.0",
    "requests>=2.28",
    "psutil>=5.9",
    "openai>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
]
